# FastAPI

./: .env.example  .gitignore  README.md  alembic.ini  docker-compose.yml  pyproject.toml
app/: requirements.txt
app/api/: enums.py  main.py  server.py
app/api/routes/v1/: __init__.py  user.py
app/core/: config.py  deps.py  security.py
app/crud/: user.py
app/models/: user.py
app/repository/: base.py
app/tests/: conftest.py
app/tests/crud/: test_user.py
app/tests/routes/: conftest.py
app/tests/routes/v1/: test_user.py
migrations/: env.py
migrations/versions/: 3ce96d0fa74f_init.py
