[tool.poetry]
name = "auth"
version = "0.1.0"
description = ""
authors = ["huynhloc04 <hloc5874@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = {extras = ["all"], version = "^0.112.0"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
